[package]
name = "kacr"
version = "0.1.0"
edition = "2024"
description = "Keep A Changelog Release — automate changelog-driven releases"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
