[package]
name = "relog"
version = "0.1.0"
edition = "2024"
description = "Cut releases from a Keep a Changelog `[Unreleased]` section"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
